--- a/NovaAPI.csproj
+++ b/NovaAPI.csproj
@@ -9,5 +9,7 @@
     <PackageReference Include="CmlLib.Core" Version="4.0.6" />
     <PackageReference Include="CmlLib.Core.Auth.Microsoft" Version="3.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
+    <PackageReference Include="System.Management" Version="9.0.0" />
   </ItemGroup>
 </Project>
